--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql:${ENDERECO_BANCO}/couch_zupper
+spring.datasource.username=${USUARIO_BANCO}
+spring.datasource.password=${SENHA_BANCO}
 
+spring.jpa.hibernate.ddl-auto=update
+
+jwt.segredo=${SEGREDO_JWT}
+jwt.milissegundos=${TIME_JWT}
