Corrigir frases de mensagens

--- a/src/main/resources/mensagens.properties
+++ b/src/main/resources/mensagens.properties
@@ -1,12 +1,12 @@
-validacao.nome.size=Quantidade de caracteres inmválida.
-validacao.nome.not-null=Esse campo não pode ficar vazio.
-validacao.nome.not-blank =Esse campo não pode ficar em branco.
-validacao.idade.decimal.min=Cadastro liberado para maiores de 18 anos.
-validacao.estado.not-null=Esse campo não pode ficar vazio.
-validacao.email.email=Email inválido. 
-validacao.email.not-null=Esse campo não pode ficar vazio.
-validacao.telefone.not-null=Esse Campo não pode ficar vazio.
-validacao.telefone.not-blank=Esse campo não pode ficar em branco.
-validacao.genero.not-null=Esse Campo não pode ficar vazio.
-validacao.senha.size=Não atingiu o mínimo de caracteres para uma senha válida.
-validacao.preferencia.not-null=Esse Campo não pode ficar vazio.
+validacao.nome.size=Quantidade de caracteres invalida.
+validacao.nome.not-null=Esse campo nao pode ficar vazio.
+validacao.nome.not-blank =Esse campo nao pode ficar em branco.
+validacao.idade.decimal-min=Cadastro liberado para 18 anos ou mais.
+validacao.estado.not-null=Esse campo nao pode ficar vazio.
+validacao.email.email=Email invalido. 
+validacao.email.not-null=Esse campo nao pode ficar vazio.
+validacao.telefone.not-null=Esse Campo nao pode ficar vazio.
+validacao.telefone.not-blank=Esse campo nao pode ficar em branco.
+validacao.genero.not-null=Esse Campo nao pode ficar vazio.
+validacao.senha.size=Nao atingiu o minimo de caracteres para uma senha valida.
+validacao.preferencia.not-null=Esse Campo nao pode ficar vazio.
