Inserir mensagem telefone fora do padrao

--- a/src/main/resources/mensagens.properties
+++ b/src/main/resources/mensagens.properties
@@ -7,6 +7,7 @@ validacao.email.email=Email invalido.
 validacao.email.not-null=Esse campo nao pode ficar vazio.
 validacao.telefone.not-null=Esse Campo nao pode ficar vazio.
 validacao.telefone.not-blank=Esse campo nao pode ficar em branco.
+validacao.telefone.padrao=Padrao telefonico nao aceito. Verifique.
 validacao.genero.not-null=Esse Campo nao pode ficar vazio.
 validacao.senha.size=Nao atingiu o minimo de caracteres para uma senha valida.
 validacao.preferencia.not-null=Esse Campo nao pode ficar vazio.
