--- a/src/main/resources/mensagens.properties
+++ b/src/main/resources/mensagens.properties
@@ -11,3 +11,4 @@ validacao.telefone.padrao=Padrao telefonico nao aceito. Verifique.
 validacao.genero.not-null=Esse Campo nao pode ficar vazio.
 validacao.senha.size=Nao atingiu o minimo de caracteres para uma senha valida.
 validacao.preferencia.not-null=Esse Campo nao pode ficar vazio.
+validacao.cep.size=Cep deve possuir 8 digitos(sem - )
