--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.12.6</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
