--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,16 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.12.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-security</artifactId>
+			<version>1.6.6</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
